--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Fahim Sarwari</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="logo">Sarwari</h1>
+        <nav>
+            <ul>
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#home" class="nav-link">Projects</a></li>
+                <li><a href="#home" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+
+    </section>
 </body>
 </html>
