Updated index.html and index.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Logo/css/all.min.css">
     <title>Fahim Sarwari</title>
 </head>
 <body>
@@ -19,8 +20,63 @@
         </nav>
     </header>
 
-    <section id="home">
+    <!-- Home -->
+    <span id="home"></span>
+    <section class="home">
+        <div class="home-text">
+            <h2>Hey!</h2>
+            <p id="introduction">
+                I am <span id="name">Fahim Sarwari</span>
+                <br>
+                a Frontend Developer.
+            </p>
+            <div class="social-media">
+                <p>Follow me on Instagram</p>
+                <div class="socials">
+                    <a href="https://www.instagram.com/fahim.sarwarii/" target="_blank">
+                        <i class="fab fa-instagram instagram"></i>
+                    </a>
+            </div>
+        </div>
 
+        <div class="profile-img">
+            <img src="Images/my-photo.jpg" alt="fahim looking at the camera">
+        </div>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
