Updated index.css and index.html About me section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
 
     <!-- Home -->
-    <span id="home"></span>
-    <section class="home">
+
+    <section id="home">
         <div class="home-text">
             <h2>Hey!</h2>
             <p id="introduction">
@@ -43,7 +43,37 @@
             <img src="Images/my-photo.jpg" alt="fahim looking at the camera">
         </div>
     </section>
-    <br>
+    
+    <!-- About -->
+    <h2 id="about">About me</h2>
+    <section class="about">
+       
+        <div class="about-text">
+            <dl>
+                <dt>Full Name</dt>
+                <dd>Mohammad Fahim Sarwari</dd>
+
+                <dt>Nationality</dt>
+                <dd>Afghan</dd>
+
+                <dt>Date of Birth</dt>
+                <dd>June 12th, 2001</dd>
+
+                <dt>Hobbies</dt>
+                <dd>Reading, coding, and futsal</dd>
+            </dl>
+        </div>
+
+        <div class="about-image">
+            <img src="Images/about-me-photo.jpg" alt="a standing side face photo of fahim">
+        </div>
+    </section>
+
+    <!-- Projects -->
+
+    <section id="projects">
+
+    </section>
     <br>
     <br>
     <br>
