--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#home" class="nav-link">Projects</a></li>
-                <li><a href="#home" class="nav-link">Contact</a></li>
+                <li><a href="#about-title" class="nav-link">About</a></li>
+                <li><a href="#projects-title" class="nav-link">Projects</a></li>
+                <li><a href="#contact-title" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -45,7 +45,7 @@
     </section>
     
     <!-- About -->
-    <h2 id="about">About me</h2>
+    <h2 id="about-title">About me</h2>
     <section class="about">
        
         <div class="about-text">
@@ -68,39 +68,56 @@
             <img src="Images/about-me-photo.jpg" alt="a standing side face photo of fahim">
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+<!-- Projects -->
+
+<h2 id="projects-title">Projects</h2>
+<section class="projects">
+    <div class="first-project">
+        <img src="Projects/Recipe Page/images/Recipe-page.png" alt="omelette recipe image">
+        <p><a href="Projects/Recipe Page/index.html" target="_blank" class="prj-link">View project</a></p>
+    </div>
+    <div class="second-project">
+        <p><a href="" target="_blank" class="prj-link">Coming Soon...</a></p>
+    </div>
+    <div class="third-project">
+        <p><a href="" target="_blank" class="prj-link">Coming Soon...</a></p>
+    </div>
+</section>
+
+<!-- Contact -->
+
+<h2 id="contact-title">Contact Me</h2>
+<section class="contact-section">
+    <div class="contact-logo">
+        <img src="Images/friendly_customer_service.png" alt="customer service logo">
+    </div>
+    <div class="social-contact">
+        <div class="contacts">
+            <a href="https://www.instagram.com/fahim_sarwarii" target="_blank">
+                <i class="fab fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
+        </div>
+        <div class="contacts">
+            <a href="https://www.facebook.com/its.fahim17" target="_blank">
+                <i class="fab fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
+        </div>
+        <div class="contacts">
+            <a href="https://wa.me/93782779792" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+                <p id="number">+93782779792</p>
+            </a>
+        </div>
+        <div class="contacts">
+            <a href="mailto:fahim.sarwari83@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
+                <p>fahim.sarwari83@gmail.com</p>
+            </a>
+        </div>
+    </div>
+</section>
 </body>
 </html>
