Changed the About Me section

--- a/index.html
+++ b/index.html
@@ -49,23 +49,9 @@
     <section class="about">
        
         <div class="about-text">
-            <dl>
-                <dt>Full Name</dt>
-                <dd>Mohammad Fahim Sarwari</dd>
-
-                <dt>Nationality</dt>
-                <dd>Afghan</dd>
-
-                <dt>Date of Birth</dt>
-                <dd>June 12th, 2001</dd>
-
-                <dt>Hobbies</dt>
-                <dd>Reading, coding, and futsal</dd>
-            </dl>
-        </div>
-
-        <div class="about-image">
-            <img src="Images/about-me-photo.jpg" alt="a standing side face photo of fahim">
+            <p>
+                My name is Mohammad Fahim Sarwari, and I am interested in building websites. I have recently started the Frontend Career course on Scrimba to learn modern web development tools and practices. I love to read books, learn coding, and play futsal in my leisure time. My goal is to become a skilled front-end developer and contribute to meaningful web projects. I’m currently learning HTML, CSS, and JavaScript, and I enjoy experimenting with layouts and components. I’m particularly passionate about creating clean, responsive designs that improve the user experience. I come from a background where I had to be self-motivated and proactive in learning, which has made me resourceful and resilient. Aside from coding, I enjoy discovering new technologies, and I believe continuous learning is key to personal and professional growth.
+            </p>
         </div>
     </section>
 
