Added Footer section

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         </div>
     </div>
 </section>
-<br>
-<br>
+<footer>
+    &copy; 2025 Mohammad Fahim Sarwari. All rights reserved.
+</footer>
 </body>
 </html>
