--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <a href="https://www.instagram.com/fahim.sarwarii/" target="_blank">
                         <i class="fab fa-instagram instagram"></i>
                     </a>
+                </div>
             </div>
         </div>
-
         <div class="profile-img">
             <img src="Images/my-photo.jpg" alt="fahim looking at the camera">
         </div>
@@ -59,15 +59,17 @@
 
 <h2 id="projects-title">Projects</h2>
 <section class="projects">
-    <div class="first-project">
-        <img src="Projects/Recipe Page/images/Recipe-page.png" alt="omelette recipe image">
-        <p><a href="Projects/Recipe Page/index.html" target="_blank" class="prj-link">View project</a></p>
-    </div>
-    <div class="second-project">
-        <p><a href="" target="_blank" class="prj-link">Coming Soon...</a></p>
-    </div>
-    <div class="third-project">
-        <p><a href="" target="_blank" class="prj-link">Coming Soon...</a></p>
+    <div class="container">
+        <div class="prjts-content">
+            <img src="Projects/Recipe Page/images/Recipe-page.png" alt="omelette recipe image">
+            <p><a href="Projects/Recipe Page/index.html" target="_blank" class="prj-link">View project</a></p>
+        </div>
+        <div class="prjts-content">
+            <p><a href="" target="_blank" class="prj-link">Coming Soon...</a></p>
+        </div>
+        <div class="prjts-content">
+            <p><a href="" target="_blank" class="prj-link">Coming Soon...</a></p>
+        </div>
     </div>
 </section>
 
@@ -75,38 +77,76 @@
 
 <h2 id="contact-title">Contact Me</h2>
 <section class="contact-section">
-    <div class="contact-logo">
-        <img src="Images/friendly_customer_service.png" alt="customer service logo">
-    </div>
-    <div class="social-contact">
-        <div class="contacts">
-            <a href="https://www.instagram.com/fahim_sarwarii" target="_blank">
-                <i class="fab fa-instagram"></i>
-                <p>Instagram</p>
-            </a>
+    <div class="contact-grnl">
+        <div class="contact-logo">
+            <img src="Images/friendly_customer_service.png" alt="customer service logo">
         </div>
-        <div class="contacts">
-            <a href="https://www.facebook.com/its.fahim17" target="_blank">
-                <i class="fab fa-facebook"></i>
-                <p>Facebook</p>
-            </a>
-        </div>
-        <div class="contacts">
-            <a href="https://wa.me/93782779792" target="_blank">
-                <i class="fab fa-whatsapp"></i>
-                <p id="number">+93782779792</p>
-            </a>
-        </div>
-        <div class="contacts">
-            <a href="mailto:fahim.sarwari83@gmail.com">
-                <i class="fa-solid fa-envelope"></i>
-                <p>fahim.sarwari83@gmail.com</p>
-            </a>
+        <div class="social-contact">
+            <div class="contacts">
+                <a href="https://www.instagram.com/fahim.sarwarii" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <p>Instagram</p>
+                </a>
+            </div>
+            <div class="contacts">
+                <a href="https://www.facebook.com/fahim.sarwarii" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                    <p>Facebook</p>
+                </a>
+            </div>
+            <div class="contacts">
+                <a href="https://wa.me/93782779792" target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                    <p id="number">+93782779792</p>
+                </a>
+            </div>
+            <div class="contacts">
+                <a href="mailto:fahim.sarwari83@gmail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>fahim.sarwari83@gmail.com</p>
+                </a>
+            </div>
         </div>
     </div>
 </section>
 <footer>
     &copy; 2025 Mohammad Fahim Sarwari. All rights reserved.
 </footer>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
